Atkinson Hyperlegible (fixed?)

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 h1, h2, h3, h4, h5 {
-    font-family: 'Atkinson Hyperlegible';
+    font-family: "Noto Serif", serif;
     text-decoration: strong;
 }
 
 body {
-    font-family: 'Atkinson Hyperlegible Mono';
+    font-family: "Atkinson Hyperlegible Mono", sans-serif;
     background-color: #eee;
     color: #111;
 }
